--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -4,3 +4,14 @@
     - name: Printing  hai from task1 of play1
       ansible.builtin.debug:
           msg: "Hai from task1 of play1"
+
+    - name: Printing Hai from taks2 of play1
+      ansible.builtin.debug:
+         msg: "Hai from task2 of play1" 
+
+- name: Play2
+  hosts: all
+  tasks:
+    - name: Printing hai from task1 of Play2
+      ansible.builtin.debug:
+        msg: "Hello world"
